GET /api/transactions added in API
